--- a/less/common.less
+++ b/less/common.less
@@ -1170,6 +1170,11 @@ span.highlight{
 	padding-left: 0;
 	padding-right: 0;
 }
+.no-paddingDevice{
+	@media @below768{
+		padding: 0;
+	}
+}
 @keyframes makeDropdown{
 
   /*0%{
