--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -115,9 +115,9 @@ section{
 				margin-top:0px;
 			}
 			@media @below768{
-				width:80%;
+				/*width:80%;
 				float:none;
-				margin: 0 auto !important;
+				margin: 0 auto !important;*/
 			}
 			.goal_number{
 				.PIXEL2EM(24);
@@ -146,7 +146,12 @@ section{
 			.invest-goal{
 				margin: 20% 17%;
 				@media @below768{
-					margin : 14% auto;
+					margin : 22% auto;
+				}
+			}
+			.withdraw-goal{
+				@media @below768{
+					margin : 28% auto;
 				}
 			}
 			.checkbox-cover{
