--- a/less/swiper.less
+++ b/less/swiper.less
@@ -814,7 +814,7 @@
     padding-top: 50% !important;
   }
   .gauge-result{
-    width:35%;
+    width:100%;
     margin-right:6%;
     float:left; 
     @media @below768{
@@ -830,6 +830,7 @@
             display:inline-block;
             width:44px;
             margin-right:6%;
+            float: left;
             img{
               width:100%;
             }
@@ -839,7 +840,7 @@
     }
     &:last-child{
       margin-right:0px;
-      width:40%;
+      width:100%;
       @media @below768{
         width: 100%;
       }
