--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -6,6 +6,10 @@ section{
 		padding-left:6%;
 		padding-right:6%;
 		padding-bottom:4%;
+		@media @below600{
+			padding-left: 3%;
+			padding-right: 3%;
+		}
 		.smart-folio-cover{
 			float: left;
 			width:100%;
@@ -301,7 +305,7 @@ section{
 				.customPanel{
 					padding-top:40px;
 					@media @below768{
-						max-width: 300px;
+						/*max-width: 300px;*/
     					overflow-x: scroll;
 					}
 				}
@@ -360,7 +364,7 @@ section{
 									text-align:center;
 									vertical-align:middle;
 									padding-left:8px;
-									min-width:32px;
+									min-width:37px;
 								}
 							}
 						}
