--- a/app/modules/investwithdraw/views/investStep1.html
+++ b/app/modules/investwithdraw/views/investStep1.html
@@ -2,7 +2,7 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 col-lg-4 col-md-4 pie-cover">
-				<p><span class="placeholder pie-header">Your asset allocation for the year</span></p>{{$root.colors}}
+				<p><span class="placeholder pie-header">Your asset allocation for the year</span></p>
 				<invest-pie-chart items="$root.resultPercentage" title="$root.pieTitle" colors="$root.colors"></invest-pie-chart>
 				<div class="pie-chart-legend">
 					<div class="label-cover">
