--- a/less/widgets.less
+++ b/less/widgets.less
@@ -298,7 +298,7 @@
 	margin-top:-60px;	
 }
 .guagePig{
-	top:11px;	
+	/*top:11px;	*/
 }
 
 .testSCroll{
@@ -529,7 +529,7 @@ input{
 		float:left;
 		border:none;
 		@media @below768{
-			width: 500px;
+			
 		}
 	}
 	.panel-heading{
@@ -540,6 +540,9 @@ input{
 		border:none;
 		border-top-left-radius:25px;
 		border-top-right-radius:25px;
+		@media @below768{
+			padding:14px;
+		}
 		.panel-title{
 			p{
 				.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
@@ -573,6 +576,7 @@ input{
 				}
 			}
 		}
+
 	}
 	.panel-collapse{
 		background-color:#f0f4f7;
@@ -630,6 +634,9 @@ input{
 						.money-value{
 							float:right;
 							width: 100%;
+							@media @below600{
+								width: 124%;
+							}
 						}
 					}
 				}
@@ -646,6 +653,9 @@ input{
 						.money-value{
 							float:right;
 							min-width: 92px;
+							@media @below768{
+								min-width: 67px;
+							}
 						}
 					}
 				}
